<resources>
    <string name="app_name">Brainy Words 2000</string>
    <!--Interiors array-->
    <string name="interiors">Interiors</string>
    <!--Animals array-->
    <string name="pets">Animals/pets</string>
    <string name="animals">Animals/farm/animals</string>
    <string name="babies">Animals/farm/babies</string>
    <string name="farm_body">Animals/farm/body</string>
    <string name="families">Animals/farm/families</string>
    <string name="dogs">Animals/dogs</string>
    <string name="plant">Animals/zoo/plant</string>
    <string name="meat">Animals/zoo/meat</string>
    <string name="omnivores">Animals/zoo/omnivores</string>
    <string name="pretend">Animals/pretend</string>
    <string name="wild">Animals/wild</string>
    <!--Clothing array-->
    <string name="accessories">Clothing/accessories</string>
    <string name="clothes">Clothing/clothes</string>
    <string name="hats">Clothing/hats</string>
    <string name="sewing">Clothing/sewing</string>
    <string name="shoes">Clothing/shoes</string>
    <string name="fashion">Clothing/fashion</string>
    <!--Grocery array-->
    <string name="bread">Grocery/bakery/breads</string>
    <string name="sweets">Grocery/bakery/sweets</string>
    <string name="fruits">Grocery/fruits</string>
    <string name="nuts">Grocery/nuts</string>
    <string name="grains">Grocery/grains</string>
    <string name="vegetables">Grocery/vegetables</string>
    <string name="berries">Grocery/berries</string>
    <string name="tubers">Grocery/tubers</string>
    <!--House array-->
    <string name="bathroom">House/bathroom</string>
    <string name="bedroom">House/household/bedroom</string>
    <string name="housewares">House/housewares</string>
    <string name="kitchen">House/kitchen</string>
    <string name="livingroom">House/livingroom</string>
    <!--Health array-->
    <string name="health_equipment">Health/equipment</string>
    <string name="nurse">Health/nurse</string>
    <string name="pediatrician">Health/pediatrician</string>
    <string name="pediatrician_back">Health/pediatrician/back</string>
    <string name="pediatrician_foot">Health/pediatrician/foot</string>
    <string name="pediatrician_hand">Health/pediatrician/hand</string>
    <string name="pediatrician_head">Health/pediatrician/head</string>
    <string name="pediatrician_midbody">Health/pediatrician/midbody</string>
    <string name="pediatrician_upperbody">Health/pediatrician/upper_body</string>
    <string name="psychologist">Health/psychologist</string>
    <!--Mall array-->
    <string name="restaurant">Mall/restaurant</string>
    <string name="boys">Mall/hair_salon/boys</string>
    <string name="girls">Mall/hair_salon/girls</string>
    <string name="percussion">Mall/music/percussion</string>
    <string name="brass">Mall/music/brass</string>
    <string name="woodwind">Mall/music/woodwind</string>
    <string name="strings">Mall/music/strings</string>
    <string name="camping">Mall/sports/camping</string>
    <string name="individual">Mall/sports/individual</string>
    <string name="team">Mall/sports/team</string>
    <string name="mall_gear">Mall/tools/gear</string>
    <string name="metal">Mall/tools/metal</string>
    <string name="rock_dirt">Mall/tools/rock_dirt</string>
    <string name="woodworking">Mall/tools/woodworking</string>
    <string name="riding">Mall/toys/riding</string>
    <string name="toy">Mall/toys/toy</string>
    <string name="vehicle">Mall/toys/vehicle</string>
    <!--Outdoors array-->
    <string name="weather">Outdoors/weather</string>
    <string name="outdoors_gear">Outdoors/beach/gear</string>
    <string name="ocean">Outdoors/ocean</string>
    <string name="beach">Outdoors/beach/beach</string>
    <string name="beach_creatures">Outdoors/beach/creatures</string>
    <string name="park_creatures">Outdoors/park/creatures</string>
    <string name="equipment">Outdoors/park/equipment</string>
    <string name="bugs">Outdoors/park/bugs</string>
    <string name="birds">Outdoors/park/birds</string>
    <string name="landscape">Outdoors/park/landscape</string>
    <string name="places">Outdoors/places</string>
    <string name="outdoors_structures">Outdoors/places/structures</string>
    <string name="plants">Outdoors/nursery/plants</string>
    <string name="tools">Outdoors/nursery/tools</string>
    <!--People array-->
    <string name="face">People/body/face</string>
    <string name="arm_hand">People/body/arm_hand</string>
    <string name="leg_foot">People/body/legs_foot</string>
    <string name="body">People/body/anatmoical_body</string>
    <string name="feelings">People/feelings</string>
    <string name="family">People/people/family</string>
    <string name="military">People/job/military</string>
    <string name="perform">People/job/performers</string>
    <string name="badguys">People/types/badguys</string>
    <string name="helpers">People/job/helpers</string>
    <string name="special">People/people/specialkids</string>
    <string name="workers">People/job/workers</string>
    <string name="play">People/things/play</string>
    <string name="good">People/things/good</string>
    <string name="bad">People/things/bad</string>
    <string name="easy">People/things/easy</string>
    <string name="fun">People/things/fun</string>
    <string name="work">People/things/work</string>
    <string name="people_boys">People/people/boys</string>
    <string name="people_girls">People/people/girls</string>
    <string name="men">People/people/men</string>
    <string name="women">People/people/women</string>
    <!--School array-->
    <string name="colors">School/colors</string>
    <string name="addition">School/addition</string>
    <string name="letters">School/letters</string>
    <string name="numbers">School/numbers</string>
    <string name="shapes">School/shapes</string>
    <!--Vehicles array-->
    <string name="passenger">Vehicles/passenger</string>
    <string name="working">Vehicles/working</string>
    <string name="vehicles_public">Vehicles/public</string>
    <string name="truck">Vehicles/truck</string>
    <string name="vehicles_fun">Vehicles/fun</string>
    <string name="vehicles_structures">Vehicles/street/structures</string>
    <string name="sidewalk">Vehicles/street/sidewalk_people</string>



</resources>
