<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_house_interior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@drawable/interior_vehicles"
    tools:context="com.example.gisela.worldworld.Interior">
    <!--android:background="@drawable/townhouseinside"-->

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/passenger"
        android:id="@+id/vehicle_cat1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="170dp"
        android:layout_width="190dp" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/vehicles_fun"
        android:id="@+id/vehicle_cat2"
        android:layout_height="170dp"
        android:layout_width="190dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/vehicle_cat1"
        android:layout_toEndOf="@+id/vehicle_cat1" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/working"
        android:id="@+id/vehicle_cat3"
        android:layout_height="170dp"
        android:layout_width="190dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/vehicle_cat2"
        android:layout_toEndOf="@+id/vehicle_cat2" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/truck"
        android:id="@+id/vehicle_cat4"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="290dp" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/vehicles_public"
        android:id="@+id/vehicle_cat5"
        android:layout_height="170dp"
        android:layout_width="290dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/vehicle_cat4"
        android:layout_toEndOf="@+id/vehicle_cat4" />


</RelativeLayout>
