<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_house_interior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@drawable/interior_tools"
    tools:context="com.example.gisela.worldworld.Interior">

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/mall_gear"
        android:id="@+id/tools_cat1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="170dp"
        android:layout_width="290dp" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/woodworking"
        android:id="@+id/tools_cat4"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="290dp" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/rock_dirt"
        android:id="@+id/tools_cat2"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tools_cat1"
        android:layout_toEndOf="@+id/tools_cat1"
        android:layout_width="290dp" />

    <Button
        android:background="@null"
        android:tag="@string/metal"
        android:id="@+id/tools_cat3"
        android:layout_height="170dp"
        android:layout_below="@+id/tools_cat1"
        android:layout_toRightOf="@+id/tools_cat1"
        android:layout_toEndOf="@+id/tools_cat1"
        android:layout_width="290dp" />



</RelativeLayout>
