<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_house_interior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:background="@drawable/interior_toys"
    tools:context="com.example.gisela.worldworld.Interior">


    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/vehicle"
        android:id="@+id/toy_cat1"
        android:layout_width="275dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="170dp" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/riding"
        android:id="@+id/toy_cat2"
        android:layout_width="275dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/toy_cat1"
        android:layout_toEndOf="@+id/toy_cat1"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />

    <Button
        android:onClick="openCategory"
        android:background="@null"
        android:tag="@string/toy"
        android:id="@+id/toy_cat3"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="550dp" />
</RelativeLayout>
